--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "4.6.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.1.3",
     "web-vitals": "^2.1.4"
   },
